# cargo-overlay-registry

./: Cargo.toml  README.md  typos.toml
.github/workflows/: ci.yml
example/: Cargo.toml
example/hello-proxy/: Cargo.toml
example/hello-proxy/src/: main.rs
example/quote/: Cargo.toml
example/quote/src/: lib.rs
example/test-consumer/: Cargo.toml
example/test-consumer/src/: main.rs
src/: cli.rs  endpoints.rs  http_proxy.rs  lib.rs  main.rs  registry.rs  state.rs  tls.rs  types.rs
src/registry/: local.rs  mod.rs  overlay.rs  publish.rs  remote.rs  spec.rs
tests/: example_crate_build.rs  integration_test.rs  local_publish_and_download.rs  publish_quote_crate.rs  publish_validation.rs  workspace_publish.rs
tests/common/: mod.rs
