[package]
name = "cargo-overlay-registry"
version = "0.1.5"
edition = "2024"
license = "Apache-2.0"
description = "A local Cargo registry proxy that overlays local crates on top of crates.io"
repository = "https://github.com/jprendes/cargo-overlay-registry"
readme = "README.md"
keywords = ["cargo", "registry", "proxy", "publish", "overlay"]
categories = ["development-tools::cargo-plugins"]

[lib]
name = "cargo_overlay_registry"
path = "src/lib.rs"

[[bin]]
name = "cargo-overlay-registry"
path = "src/main.rs"

[[bin]]
name = "cargo-publish-dry-run"
path = "src/bin/cargo-publish-dry-run.rs"

[dependencies]
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.13"
reqwest = { version = "0.12", features = ["stream"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
bytes = "1"
futures = "0.3"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
url = "2"
hyper = { version = "1.8.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["tokio", "server-auto"] }
tower = { version = "0.5.3", features = ["util"] }
tempfile = "3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
