[package]
name = "test-consumer"
version = "0.1.0"
edition = "2024"
description = "A test crate that consumes the quote crate"
license = "Apache-2.0"
homepage = "https://github.com/jprendes/cargo-proxy-registry"
repository = "https://github.com/jprendes/cargo-proxy-registry"

[dependencies]
quote = { version = "99.0.0", path = "../quote" }
